--- a/common/build.gradle
+++ b/common/build.gradle
@@ -49,14 +49,18 @@ dependencies {
 //    implementation 'com.blankj:utilcodex:1.25.5'
 }
 
+
+// 生成sourceJar和javaDocJar构件
 task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
     classifier = 'sources'
-    from android.sourceSets.main.java.sourceFiles
 }
 
 task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.sourceFiles
+    source = android.sourceSets.main.java.srcDirs
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    // destinationDir = file("../javadoc/")
+    failOnError false
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -64,12 +68,12 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
-task classesJar(type: Jar) {
+/*task classesJar(type: Jar) {
     from "$buildDir/intermediates/classes/release"
-}
+}*/
 
 artifacts {
-    archives classesJar
+//    archives classesJar
     archives javadocJar
     archives sourcesJar
 }
