--- a/build.gradle
+++ b/build.gradle
@@ -34,3 +34,24 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+//    JavaVersion.VERSION_1_8 = '1.8'
+//    JavaVersion.VERSION_1_8 = '1.8'
+    releaseVersionCode = 1
+    releaseVersionName = '1.0.0'
+
+    androidCompileSdkVersion = 26
+    androidBuildToolsVersion = '26.1.0'
+    androidSupportSdkVersion = '28.0.0'
+    minSdkVersion = 16
+    targetSdkVersion = 24
+
+    junitVersion = '4.12'
+
+    rxjava2Version = '2.1.11'
+    retrofit2Version = '2.4.0'
+    gsonVersion = '2.8.5'
+    butterknifeVersion = '9.0.0'
+    commonVersion = '1.1.0'
+}
