--- a/common/build.gradle
+++ b/common/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:support-annotations:27.1.1'
-    api "com.google.code.gson:gson:2.6.2"
+    api "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
 
     api 'com.blankj:utilcode:1.25.5'
 // if u use AndroidX, use the following
