--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,14 +3,15 @@ apply plugin: 'com.github.dcendents.android-maven'
 group = 'com.github.0xm1nam0'
 
 android {
-    compileSdkVersion 27
+    def globalConfiguration = rootProject.extensions.getByName("ext")
 
+    compileSdkVersion globalConfiguration["androidCompileSdkVersion"]
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0.4"
+        minSdkVersion globalConfiguration["androidMinSdkVersion"]
+        targetSdkVersion globalConfiguration["androidTargetSdkVersion"]
+        versionCode globalConfiguration["androidVersionCode"]
+        versionName globalConfiguration["androidVersionName"]
 
     }
 
@@ -34,14 +35,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:support-annotations:27.1.1'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.annotation:annotation:1.0.0'
     api "com.google.code.gson:gson:$rootProject.ext.gsonVersion"
 
-    api 'com.blankj:utilcode:1.25.5'
+//    api 'com.blankj:utilcode:1.25.5'
 // if u use AndroidX, use the following
-//    implementation 'com.blankj:utilcodex:1.25.5'
+    api 'com.blankj:utilcodex:1.25.5'
 }
 
 
